Bug #1478/#6952, Volume widget mis-align, Chrome 27
* Added extra body-class to distinguish Chrome & Safari,
* It seems that Chrome has fixed a CSS bug which oup-light CSS was accomodating
* http://iet-it-bugs.open.ac.uk/node/1478
* http://ltsredmine.open.ac.uk/issues/6952

--- a/application/themes/oup_light/css/oup-light.css
+++ b/application/themes/oup_light/css/oup-light.css
@@ -176,9 +176,12 @@ body.bg-pale-blue{ background:#EBF4FB; color:#1A1A1A; }
 	top:4px;
 }
 .ua-webkit .mejs-controls .oup-volume-widget {
+    top:4px;
+}
+/*.ua-webkit*/ .br-Safari .mejs-controls .oup-volume-widget {
 	top:-6px;
 }
-.ua-webkit .mejs-controls .oup-volume-widget .oup-display {
+/*.ua-webkit*/ .br-Safari .mejs-controls .oup-volume-widget .oup-display {
 	position:relative;
 	top:11px;
 }
